# swiftlearner

./: .gitignore  .gitpod.Dockerfile  .travis.yml  LICENSE  README.md  build.sbt
examples/hotels/: README.md  build.sbt
examples/hotels/scripts/: filter.pl
src/main/scala/saiml/bayes/: GaussianNaiveBayes.scala
src/main/scala/saiml/coll/: SeqOp.scala  TraversableOp.scala
src/main/scala/saiml/ga/: Genetic.scala  HelloGenetic.scala  Individual.scala  Population.scala
src/main/scala/saiml/kmeans/: KMeans.scala
src/main/scala/saiml/knn/: KNearestNeighbors.scala
src/main/scala/saiml/math/: ArrayOp.scala  MatrixOp.scala  Stat.scala  VectorOp.scala
src/main/scala/saiml/nn/backprop/: BackpropClassifier.scala  BackpropNet.scala
src/main/scala/saiml/nn/perceptron/: Perceptron.scala
src/main/scala/saiml/softmax/: Softmax.scala  SoftmaxClassifier.scala
src/main/scala/saiml/util/: package.scala
src/test/scala/com/danylchuk/swiftlearner/: MemoryTesting.scala
src/test/scala/saiml/bayes/: GaussianNaiveBayesTest.scala
src/test/scala/saiml/coll/: SeqOpTest.scala  TraversableOpTest.scala
src/test/scala/saiml/data/: FisherIris.scala  Mnist.scala  MnistTest.scala
src/test/scala/saiml/ga/: GeneticIris.scala  GeneticTest.scala  HelloGenetic.scala
src/test/scala/saiml/kmeans/: KMeansTest.scala
src/test/scala/saiml/knn/: KNearestNeighborsTest.scala
src/test/scala/saiml/math/: ArrayOpTest.scala  MatrixOpTest.scala  StatTest.scala  VectorOpTest.scala
src/test/scala/saiml/nn/backprop/: BackpropClassifierTest.scala  BackpropTest.scala
src/test/scala/saiml/nn/perceptron/: PerceptronTest.scala
src/test/scala/saiml/softmax/: SoftmaxTest.scala
src/test/scala/saiml/util/: UtilTest.scala
swiftlearner_cpp/: CMakeLists.txt  README.md
swiftlearner_cpp/src/data/: FisherIris.cpp  FisherIris.hpp  Mnist.cpp  Mnist.hpp
swiftlearner_cpp/src/nn/: BackpropClassifier.cpp  BackpropClassifier.hpp  BackpropNet.cpp  BackpropNet.hpp  Perceptron.cpp  Perceptron.hpp
swiftlearner_cpp/test/: CMakeLists.txt
swiftlearner_cpp/test/data/: MnistTest.cpp
swiftlearner_cpp/test/nn/: BackpropClassifierTest.cpp  BackpropTest.cpp  PerceptronTest.cpp
swiftlearner_rust/: Cargo.toml  README.md  test_verbose.sh
swiftlearner_rust/.cargo/: config.toml
swiftlearner_rust/src/: lib.rs
swiftlearner_rust/src/data/: fisher_iris.rs  mnist.rs  mod.rs
swiftlearner_rust/src/nn/: backprop_classifier.rs  backprop_net.rs  mod.rs  perceptron.rs
(+43 files in other folders)
